--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <main>
     
 <p>Mobile Legends: Bang Bang (MLBB) is a phenomenon in the world of mobile gaming, captivating millions of players globally since its release in 2016. Developed by Moonton, this multiplayer online battle arena (MOBA) game has carved a niche for itself, particularly in Southeast Asia.</p> 
-  <p>In this article, we will delve into the game's mechanics, its evolution, and how tools like the <a href="https://mlinjectors.com/zolaxis-patcher/">Zolaxis Patcher</a> enhance the gaming experience by unlocking premium content.</p>
+  <p>In this article, we will delve into the game's mechanics, and how tools like the <a href="https://mlinjectors.com/zolaxis-patcher/">Zolaxis Patcher</a> enhance the gaming experience by unlocking premium content.</p>
 
 <div style="text-align: center;">
  <img src="https://i.postimg.cc/KvQKTh7n/1.jpg" alt="zolaxis.jpg" style="max-width: 100%; height: auto;">
