--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  <img src="https://i.postimg.cc/KvQKTh7n/1.jpg" alt="zolaxis.jpg" style="max-width: 100%; height: auto;">
 </div>
 
-<h2> <a href="https://jennycharacters.pages.dev/">Explore All Jenny Characters in the Jenny MOD: Your Ultimate Guide</a></h2>
+<h2> <a href="https://mlininj.netlify.app/">Key Differences Between Mobile Legends and League of Legends: Wild Rift</a></h2>
 
 <h2 class="mb-2 mt-6 text-lg first:mt-3">The Rise of Mobile Legends: Bang Bang</h2>
 <h2 class="mb-2 mt-6 text-lg first:mt-3"><strong>A Brief History</strong></h2>
