--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content=" Discover the world of Mobile Legends: Bang Bang, its gameplay mechanics, history, and the impact of tools like Zolaxis Patcher.">
  <meta name="robots" content="index,follow"> 
 <link rel="canonical" href="https://itsnicksam.github.io/mlininjectors/">
+ <meta name="google-site-verification" content="xKquEPHnSWLGGCjQ8BREd-p49_xY2xvqK5yTDuFifhI" />
  
   <style>
     body {
