--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
  <meta name="robots" content="index,follow"> 
 <link rel="canonical" href="https://itsnicksam.github.io/mlininjectors/">
  <meta name="google-site-verification" content="xKquEPHnSWLGGCjQ8BREd-p49_xY2xvqK5yTDuFifhI" />
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://itsnicksam.github.io/mlininjectors/"
+  },
+  "headline": "Top ML Injectors for Unlocking Skins in Mobile Legends",
+  "description": "Discover the best ML injectors for unlocking skins in Mobile Legends: Bang Bang. Learn about their features, safety, and how to use them effectively!",
+  "imageUrl": "https://i.postimg.cc/KvQKTh7n/1.jpg",
+  "author": {
+    "@type": "Person",
+    "name": "Nick Sam"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Nick Sam",
+    "logo": {
+      "@type": "ImageObject",
+      "url": ""
+    }
+  },
+  "datePublished": "2024-08-10",
+  "dateModified": "2024-08-10"
+}
+</script>
  
   <style>
     body {
